Cleaned warnings